changed the directory name and added yt mcp server

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
 Base APIs/__pycache__/
 # Local OAuth credentials and tokens
-Base APIs/client_secret.json
-Base APIs/*_token.json
+base_apis/client_secret.json
+base_apis/*_token.json
