--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-requests==2.31.0
-python-dotenv==1.0.0
+requests
+python-dotenv
 google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
-fastapi==0.111.0
-uvicorn==0.29.0
+fastapi
+uvicorn
+fastmcp
